# Meta-Terminal-X

./: .gitignore  .gitmodules  LICENSE  README.md
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt
android-project/app/jni/src/: CMakeLists.txt  main.cpp
android-project/app/release/: output-metadata.json
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/res/values/: strings.xml
windows-project/: .clang-format  CMakeLists.txt  README.md
windows-project/include/: ConsoleBox.hpp  ControlPanel.hpp  DynamicChart.hpp  SerialConfigDialog.hpp  TerminalWindow.hpp  ThemeWidget.hpp
windows-project/scripts/: buildMacOS.sh  buildVC14-Win10.0.18362.0.cmd
windows-project/src/: ConsoleBox.cpp  ControlPanel.cpp  ControlPanelWidget.ui  DynamicChart.cpp  SerialConfigDialog.cpp  SerialConfigDialog.ui  TerminalWindow.cpp  TerminalWindow.ui  ThemeWidget.cpp  main.cpp  main.ui  resources.qrc
